deployments/sequencer/references/sequencer-node/Namespace.sequencer-node.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sequencer-node
  namespace: sequencer-node
