deployments/sequencer/references/sequencer-node/Service.sequencer-node-service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: sequencer-node-service
  namespace: sequencer-node
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: rpc
      port: 8081
      targetPort: 8081
    - name: monitoring
      port: 8082
      targetPort: 8082
  selector:
    app: sequencer-node
  type: ClusterIP
