deployments/sequencer/references/sequencer-node/Ingress.sequencer-node-ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/common-name: test.gcp-integration.sw-dev.io
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
  labels:
    app: sequencer-node
  name: sequencer-node-ingress
  namespace: sequencer-node
spec:
  rules:
    - host: test.gcp-integration.sw-dev.io
      http:
        paths:
          - backend:
              service:
                name: sequencer-node-service
                port:
                  number: 8082
            path: /monitoring/
            pathType: Prefix
  tls:
    - hosts:
        - test.gcp-integration.sw-dev.io
      secretName: sequencer-tls
